# azure-retail-supply-chain-lakehouse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
azure/adf/dataset/: ds_adls_landing.json  ds_azure_sql_table.json
azure/adf/linkedService/: ls_adls_gen2.json  ls_azure_databricks.json  ls_azure_sql.json
azure/adf/pipeline/: pl_metadata_ingestion.json  pl_orchestrate_lakehouse.json
azure/bicep/: main.bicep
azure/config/: ingestion_entities.json
azure/sql/: 001_create_ingestion_control.sql
databricks/bronze/: 01_generate_demo_batches.py  02_load_bronze.py  03_load_bronze_from_adls.py
databricks/gold/: 01_build_dimensions.py  02_build_sales_fact.py  03_build_inventory_fact.py
databricks/quality/: 01_validate_pipeline.py  02_validate_generic.py
databricks/setup/: 01_create_lakehouse.py
databricks/silver/: 01_clean_products.py  02_clean_warehouses.py  03_clean_orders.py  04_clean_order_items.py  05_clean_inventory_events.py  06_build_customer_history.py
databricks/workflows/: azure_lakehouse_pipeline.json  lakehouse_pipeline.json
docs/: azure-deployment-guide.md
docs/architecture/: azure-target-architecture.md
docs/decisions/: 001-databricks-core-and-azure-deployment-boundary.md
src/retail_lakehouse/: __init__.py  generate_source_data.py  silver.py  validation.py
tests/fixtures/: expected_batch_summary.json
tests/unit/: test_azure_assets.py  test_customer_scd2.py  test_generate_source_data.py  test_gold_point_in_time.py  test_validation.py  test_workflow_definition.py  test_workflow_split.py
(+4 files in other folders)
