[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-lakehouse"
version = "0.0.1"
description = "Azure Retail & Supply Chain Lakehouse — portfolio data engineering project"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Data-definition module: long inline row literals are intentional and readable.
"src/retail_lakehouse/generate_source_data.py" = ["E501"]
# Databricks notebooks: dbutils/display/spark are injected at runtime.
"databricks/**/*.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
